💡 Ajout de la fonctionnalité X2